# BonziSEND

./: README.md  pyproject.toml
scr/BonziSEND/: __init__.py  core.py
